# product-api/handlers/get.go
@@ -13,6 +13,9 @@ import (
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(w http.ResponseWriter, r *http.Request) {
 	p.l.Println("Handle GET Products")
+
+	w.Header().Add("Content-Type", "application/json")
+
 	products := data.GetProducts()
 	err := products.ToJSON(w)
 	if err != nil {
@@ -20,7 +23,7 @@ func (p *Products) ListAll(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Returns a single product
 // responses:
 // 	200: productResponse
@@ -28,6 +31,7 @@ func (p *Products) ListAll(w http.ResponseWriter, r *http.Request) {
 
 // ListSingle handles GET Requests
 func (p *Products) ListSingle(w http.ResponseWriter, r *http.Request) {
+	w.Header().Add("Content-Type", "application/json")
 	id := getProductID(r)
 
 	p.l.Println("[DEBUG] get record id", id)
